--- a/About.html
+++ b/About.html
@@ -6,7 +6,7 @@
         <title>
             School Task Assignment
         </title>
-        <link rel="icon" type="image/x-icon" href="Images/Icons/School.ico">
+        <link rel="icon" type="image/x-icon" href="Images/Icons/School.png">
     </head>
     <body style="background-color:#cccccc;">
         <header style="text-align:center; font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">
@@ -39,12 +39,15 @@
                     <form style="display: flex; flex-direction: row;">
                         <input type="text" id= "SearchField" placeholder="Principal Profile" style="flex:3;">
                         <div style="flex:2; display: flex;flex-direction: column;">
-                            <select id="SearchType" name="SearchType" style="flex:2;">
+                            <select id="SearchType" name="SearchType" title="Search Type" style="flex:2; text-align: center;">
                                 <option value="Profile" selected>Profile</option>
                                 <option value="Tasks">Tasks</option>
                                 <option value="Meeting">Meeting</option>
                             </select>
-                            <button type="button" title="Search" id= "Search" style="flex:1; background-color: beige;">Search</button>
+                           
+                            <button type="button" title="Search" id= "Search" style="flex:1; background-color: beige; font-size:13px;">
+                                <label for="Search"><img width="13" height="13" src="Images/Icons/Search.png" alt="Search Icon"/>Search</label>
+                            </button>
                         </div>
                     </form>
                 </li>
@@ -54,15 +57,21 @@
         <main style="display:flex; margin: 20px 20px;">
             <article style="display:flex; flex-direction:column; flex:4; border:2px solid #111111; border-right-width: 1px; padding: 10px 10px 10px 10px;">
                 <div style="display:flex; flex-direction:column; flex:1;">
-                    <p>
-                        <!-- Place Your Code Here! for only content pages like about and display task.-->
-                        <h2>This school is great.</h2>
-                    </p>
+                    <!-- Place Your Code Here! for only content pages like about and display task.-->
+                    <h4>This School is Great</h4>
                 </div>
             </article>
             <aside style="display:flex; flex:1; border:2px solid #111111; border-left-width: 1px; padding: 10px 10px 10px 10px;">
                 <div style="flex:1">
                     <h2 style="text-align:center;"> Announcements </h2>
+                    <ul>
+                        <li>There will be a night shift today. Prepare your tents.</li>
+                        <li>The tasks have been updated, recently.</li>
+                        <li>There was a data leak do not forget to change your websites.</li>
+                        <li>The summer competitions is open.</li>
+                        <li>You can now manage meetings.</li>
+                        <li>This is the first launch of the website.</li>
+                    </ul>
                 </div>
             </aside>
             <!-- Place Your Code Here! for all content types like task handler, forms of login and sign-up and so.
@@ -73,10 +82,10 @@
             <hr>
             <div style="margin:20px 20px;">
                 <h4>Contact Us:</h4>
-                <p>
+                <p id="Contacts">
                     <i>20, Cairo Uneversity ST, Giza</i><br>
                     Tel:<b>+201114435107</b><br>
-                    </h4><b>Mail The School:</b></h4>
+                    <h4><b>Mail The School:</b></h4>
                         <ul>
                             <li><a href="mailto:mohamedwali9091@gmail.com">School Principal</a></li>
                             <li><a href="mailto:jonathanmokhles@gmail.com">Enrollment Office</a></li>
@@ -87,6 +96,7 @@
                     <li><a href="Credits.html">Credits</a></li>
                     <li><a href="License.html">License</a></li>
                     <li><a href="#NavBar">Back to the Top of the Page.</a></li>
+                    
                 </ul>
             </div>
         </footer>
