--- a/Templetes/Without Announcements.html
+++ b/Templetes/Without Announcements.html
@@ -27,7 +27,7 @@
                     <a href="Tasks.html">Tasks</a>
                 </li>
                 <li style="display: inline;flex:1">
-                    <a href="Meetings.html">Meetings</a>
+                    <a href="completed Tasks.html">completed Tasks</a>
                 </li>
                 <li style="display: inline;flex:1">
                     <a href="Profile.html">Profile</a>
@@ -42,7 +42,7 @@
                             <select id="SearchType" name="SearchType" title="Search Type" style="flex:2; text-align: center;">
                                 <option value="Profile" selected>Profile</option>
                                 <option value="Tasks">Tasks</option>
-                                <option value="Meeting">Meeting</option>
+                                <option value="completed Task">completed Task</option>
                             </select>
                            
                             <button type="button" title="Search" id= "Search" style="flex:1; background-color: beige; font-size:13px;">
