Changed <br> to <br/>

--- a/Home.html
+++ b/Home.html
@@ -59,12 +59,12 @@
                 <div style="display:flex; flex-direction:column; flex:1;">
                     <h3>Welcome, Visitors.</h3>
                     <p>
-                        This is the task management website of the school. You can <br>
+                        This is the task management website of the school. You can <br/>
                         <h4>For Teachers:</h4>
                         You can sign-up your profile and activate it to start recieving tasks.
                         Ensure that the email is valid and type a strong password because of data security.
                         If you have any problem is your account try to contact the <a href="#Contacts">Principal</a> to schedule a session with the IT.
-                        Please, try to turn-in the work in time and track all your tasks.<br>
+                        Please, try to turn-in the work in time and track all your tasks.<br/>
                         <h4>For Visitors:</h4>
                         if you are seeking this website to enroll in the school, you should follow these steps:-
                         <ol>
@@ -126,8 +126,8 @@
             <div style="margin:20px 20px;">
                 <h4>Contact Us:</h4>
                 <p id="Contacts">
-                    <i>20, Cairo Uneversity ST, Giza</i><br>
-                    Tel:<b>+201114435107</b><br>
+                    <i>20, Cairo Uneversity ST, Giza</i><br/>
+                    Tel:<b>+201114435107</b><br/>
                     <h4><b>Mail The School:</b></h4>
                         <ul>
                             <li><a href="mailto:mohamedwali9091@gmail.com">School Principal</a></li>
