--- a/Profile.html
+++ b/Profile.html
@@ -62,13 +62,13 @@
                     <form>
                         <label for ="username">Name</label>
                         <input type="text" id="username" name="username" required>
-                        <br>
+                        <br/>
                         <label for ="emal">Email</label>
                         <input type="email" id="email" name="Email" required>
-                        <br>
+                        <br/>
                         <label for ="age">Age</label>
                         <input type="number" id="age" name="age" required>
-                        <br>
+                        <br/>
                         <label for ="city">City</label>
                         <input type="text" id="city" name="city" required>
                         <hr>
@@ -90,8 +90,8 @@
             <div style="margin:20px 20px;">
                 <h4>Contact Us:</h4>
                 <p id="Contacts">
-                    <i>20, Cairo Uneversity ST, Giza</i><br>
-                    Tel:<b>+201114435107</b><br>
+                    <i>20, Cairo Uneversity ST, Giza</i><br/>
+                    Tel:<b>+201114435107</b><br/>
                     <h4><b>Mail The School:</b></h4>
                         <ul>
                             <li><a href="mailto:mohamedwali9091@gmail.com">School Principal</a></li>
