Updated Tasks.html <br>

--- a/Tasks.html
+++ b/Tasks.html
@@ -84,8 +84,8 @@
             <div style="margin:20px 20px;">
                 <h4>Contact Us:</h4>
                 <p id="Contacts">
-                    <i>20, Cairo Uneversity ST, Giza</i><br>
-                    Tel:<b>+201114435107</b><br>
+                    <i>20, Cairo Uneversity ST, Giza</i><br/>
+                    Tel:<b>+201114435107</b><br/>
                     <h4><b>Mail The School:</b></h4>
                         <ul>
                             <li><a href="mailto:mohamedwali9091@gmail.com">School Principal</a></li>
