--- a/Credits.html
+++ b/Credits.html
@@ -58,8 +58,49 @@
             <article style="display:flex; flex-direction:column; flex:4; border:2px solid #111111; border-right-width: 1px; padding: 10px 10px 10px 10px;">
                 <div style="display:flex; flex-direction:column; flex:1;">
                     <!-- Place Your Code Here! for only content pages like about and display task.-->
-                    <h4>This will have our names, IDs, and Emails</h4>
-                </div>
+                    <h1>This will have our names, IDs, and Emails</h1>
+                    <table>
+                        <thead>
+                            <tr>
+                                <td>name</td>
+                                <td>id</td>
+                                <td>email</td>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>mostafa ayman abdullah</td>
+                                <td>20230653</td>
+                                <td>aymnmstfy998@gmail.com</td>
+                            </tr>
+                            <tr>
+                                <td>mostafa mohamed farag beshier</td>
+                                <td>20230524</td>
+                                <td>mostafalotfy808@gmail.com</td>
+                            </tr>
+                            <tr>
+                                <td>mohamed wali</td>
+                                <td>20220710</td>
+                                <td>mohamedwali9091@gmail.com</td>
+                            </tr>
+                            <tr>
+                                <td>jonathan mokhles</td>
+                                <td>20220100</td>
+                                <td>jonathanmokhles@gmail.com</td>
+                            </tr>
+                            <tr>
+                                <td>both simon chuol</td>
+                                <td>20180465</td>
+                                <td>lokliehcuol@gmail.com</td>
+                            </tr>
+                            <tr>
+                                <td>nhial mawich chatiem</td>
+                                <td>20180447</td>
+                                <td>nhial1994@gmail.com</td>
+                            </tr>   
+                        </tbody>
+                    </table>
+              </div>
             </article>
             <aside style="display:flex; flex:1; border:2px solid #111111; border-left-width: 1px; padding: 10px 10px 10px 10px;">
                 <div style="flex:1">
