added style to credits

--- a/Credits.html
+++ b/Credits.html
@@ -58,13 +58,13 @@
             <article style="display:flex; flex-direction:column; flex:4; border:2px solid #111111; border-right-width: 1px; padding: 10px 10px 10px 10px;">
                 <div style="display:flex; flex-direction:column; flex:1;">
                     <!-- Place Your Code Here! for only content pages like about and display task.-->
-                    <h1>This will have our names, IDs, and Emails</h1>
-                    <table>
+                    <h3>Our Names, IDs, and Emails</h3>
+                    <table style=" text-align:center;">
                         <thead>
                             <tr>
-                                <td>name</td>
-                                <td>id</td>
-                                <td>email</td>
+                                <th>Name</th>
+                                <th>ID</th>
+                                <th>Email</th>
                             </tr>
                         </thead>
                         <tbody>
