Polishing the HTML Phase

--- a/License.html
+++ b/License.html
@@ -58,6 +58,9 @@
             <article style="display:flex; flex-direction:column; flex:4; border:2px solid #111111; border-right-width: 1px; padding: 10px 10px 10px 10px;">
                 <div style="display:flex; flex-direction:column; flex:1;">
                     <!-- Place Your Code Here! for only content pages like about and display task.-->
+                    <div>
+                        Check the <a href="LICENSE">General Public License</a>
+                    </div>
                 </div>
             </article>
             <aside style="display:flex; flex:1; border:2px solid #111111; border-left-width: 1px; padding: 10px 10px 10px 10px;">
