Added Credits Files

--- a/Credits.html
+++ b/Credits.html
@@ -58,6 +58,7 @@
             <article style="display:flex; flex-direction:column; flex:4; border:2px solid #111111; border-right-width: 1px; padding: 10px 10px 10px 10px;">
                 <div style="display:flex; flex-direction:column; flex:1;">
                     <!-- Place Your Code Here! for only content pages like about and display task.-->
+                    <h3>Project Number: 3</h3>
                     <h3>Our Names, IDs, and Emails</h3>
                     <table style=" text-align:center;">
                         <thead>
@@ -100,6 +101,11 @@
                             </tr>   
                         </tbody>
                     </table>
+                    <br/>
+                    <div>
+                        <hr/>
+                        You can download the <a href="Credits.docx">Word</a> or the <a href="Credits.pdf">Pdf</a> file of the Credits.
+                    </div>
               </div>
             </article>
             <aside style="display:flex; flex:1; border:2px solid #111111; border-left-width: 1px; padding: 10px 10px 10px 10px;">
