--- a/Sections/Tasks/ViewTaskTeacher.html
+++ b/Sections/Tasks/ViewTaskTeacher.html
@@ -75,6 +75,12 @@
                         <p id="taskDetailsContent">Task details will be displayed here.</p>
                         <button onclick="markTaskCompleted()">Mark as Completed</button>
                     </div>
+                    <br>
+                    <div>
+                        <a href="CompletedTasks.html">
+                            View Completed Tasks
+                        </a>
+                    </div>
                 </div>
             </article>
             <aside style="display:flex; flex:1; border:2px solid #111111; border-left-width: 1px; padding: 10px 10px 10px 10px;">
