fixed sign-in,sign-up, profile settings

--- a/ChangePassword.html
+++ b/ChangePassword.html
@@ -4,14 +4,13 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width">
         <title>
-            School Task Assignment - Sign-Up
+            School Task Assignment - Change Password
         </title>
-        <link rel="icon" type="image/x-icon" href="../../Images/Icons/School.png">
-        <link rel="stylesheet" href="../../CSS Source/Templetes/Basic.css">
-        <link rel="stylesheet" href="../../CSS Source/Profile_Settings.css">
-        <script src="../../JS Source/Templetes/Basic.js"></script>
-        <script src="../../JS Source\Templetes\Recursive.js"></script>
-        <script src="../../JS Source/Profile_Settings.js"></script>
+        <link rel="icon" type="image/x-icon" href="Images/Icons/School.png">
+        <link rel="stylesheet" href="CSS Source/Templetes/Basic.css">
+        <link rel="stylesheet" href="CSS Source/Profile_Settings.css">
+        <script src="JS Source/Templetes/Basic.js"></script>
+        <script src="JS Source/Profile_Settings.js"></script>
     </head>
     <body>
         <header>
@@ -25,7 +24,7 @@
             <ul>
                 <li>
                     <div>
-                        <img src="../../Images/Users/User/Profile.png" alt = "Profile Image" id="open-profile" class="pressable" onclick="handle_tap(this)">
+                        <img src="Images/Users/User/Profile.png" alt = "Profile Image" id="open-profile" class="pressable" onclick="handle_tap(this)">
                     </div>
                 </li>
                 <li >
@@ -65,7 +64,7 @@
                                 <button type="button" title="Search" id= "Search" onclick="handle_tap(this)">
                                     <label for="Search">
                                         <div>
-                                            <img src="../../Images/Icons/Search.png" alt="Search Icon"/>
+                                            <img src="Images/Icons/Search.png" alt="Search Icon"/>
                                         </div>
                                         <div>Search</div>
                                     </label>
@@ -85,64 +84,32 @@
         <main>
             <article onclick="handle_tap(this)">
                 <div>
-                    <form class="profil-setiing">
+                    <!-- Place Your Code Here! for only content pages like about and display task.-->
+                    <h1>Change Password</h1>
+                    <form class="change-password">        
                         <table cellpadding="2">
                             <tbody>
                                 <tr>
-                                    <td><label for ="user-name">UserName: </label></td>
-                                    <td><input type="text" id="user-name" name="user-name" autocomplete="username" required></td>
+                                    <td><label for="your-old-password">Old Password:</label></td>
+                                    <td><input type="password" id="your-old-password" required></td>
+                                </tr>
+                                
+                                <tr>
+                                    <td><label for="new-password">New Password:</label></td>
+                                    <td><input type="password" id="new-password" required></td>                                
                                 </tr>
                                 <tr>
-                                    <td><label for ="password">Password: </label></td>
-                                    <td><input type="password" id="password" name="password" autocomplete="password" required></td>
+                                    <td><label for="confirm-password">Confirm New Password:</label></td>
+                                    <td><input type="password" id="confirm-password" required></td>
                                 </tr>
-                                <tr>
-                                    <td><label for ="full-name">Full Name: </label></td>
-                                    <td><input type="text" id="full-name" name="full-name" autocomplete="username"></td>
-                                </tr>
-                                <tr>
-                                    <td><label for ="email">Email: </label></td>
-                                    <td><input type="email" id="email" name="Email" autocomplete="email" required></td>
-                                </tr>
-                                <tr>
-                                    <td><label for ="birth-date">Birth Date: </label></td>
-                                    <td><input type="date" id="birth-date" name="birth-date" required></td>
-                                </tr>
-                                <tr>
-                                    <td><label for ="address">Address: </label></td>
-                                    <td><input type="text" id="address" name="address"></td>
-                                </tr>
-                                <tr>
-                                    <td><label for="department">Department:</label></td>
-                                    <td>
-                                        <select id="department" name="department">
-                                            <option value="general">General</option>
-                                            <option value="ma">Maths</option>
-                                            <option value="ar">Arabic</option>
-                                            <option value="cs">Computer Science</option>
-                                            <option value="en">Englich</option>
-                                            <option value="sc">Science</option>
-                                            <option value="arts">Arts</option>
-                                        </select>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><label for="is_admin">Admin User?</label></td>
-                                    <td><input type="checkbox" id="is_admin" name="is_admin"></td>
-                                </tr>
-                                <tr>
-                                    <td colspan="2"><hr/></td>
-                                </tr>
-                                <tr>
-                                    <input type="button" id="sign-up-button" value="Sign-Up" onclick="profile_handle_buttons(this)">
-                                </tr>
+                                <input type="button" id="save-password" value="Change Password" onclick="profile_handle_buttons(this);">
                             </tbody>
                         </table>
                     </form>
                 </div>
             </article>
             <aside onclick="handle_tap(this)">
-                <img src="../../Images/Icons/right_arrow.png" alt="Right Arrow" onclick="show_hide_side()">
+                <img src="Images/Icons/right_arrow.png" alt="Right Arrow" onclick="show_hide_side()">
                 <div>
                     <h2> Announcements </h2>
                     <ul>
@@ -174,8 +141,8 @@
                         </ul>
                 </p>
                 <ul>
-                    <li><a href="../../Credits.pdf">Credits</a></li>
-                    <li><a href="../../LICENSE">License</a></li>
+                    <li><a href="Credits.pdf">Credits</a></li>
+                    <li><a href="LICENSE">License</a></li>
                     <li><a href="#NavBar">Back to the Top of the Page.</a></li>
                     
                 </ul>
